Old/scripts/logs/old_runs/log22923100.txt
  File "q1_4.py", line 34
    loss = mse_loss(discrim_fake, torch.ones_like(discrim_fake))
                                                               ^
IndentationError: unindent does not match any outer indentation level
srun: error: v016: task 0: Exited with exit code 1
